# copilot-workspace-windows

./: README.md
.github/: copilot-setup-steps.yml
.github/workflows/: copilot-setup-steps.yml
inject-tool/: Cargo.toml
inject-tool/src/: main.rs
inject-tool/tests/: integration_test.rs
inject-tool/tests/c/: cmdline_target.c  stub.c  target.c
stub-dll/: Cargo.toml
stub-dll/.cargo/: config.toml
stub-dll/src/: lib.rs
